--- a/Lista/index.html
+++ b/Lista/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,200;1,800&display=swap"
         rel="stylesheet">
+   
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/button.css">
     <link rel="stylesheet" href="css/records.css">
@@ -27,8 +28,6 @@
             <thead>
                 <tr>
                     <th>Produto</th>
-                    <th>Responsável</th>
-                    <th>E-mail</th>
                     <th>Ação</th>
                 </tr>
             </thead>
@@ -39,7 +38,7 @@
         <div class="modal" id="modal">
             <div class="modal-content">
                 <header class="modal-header">
-                    <h2>Novo Cliente</h2>
+                    <h2>Escolha seu produto</h2>
                     <span class="modal-close" id="modalClose">&#10006;</span>
                 </header>
                 <form id="form" class="modal-form">
@@ -53,8 +52,7 @@
             </div>
         </div>
     </main>
-    <footer class="body-footer">
-        <button id="button" class="button blue">Excluir Lista</button>
-       </footer>
-</body>
+    </div>
+    <div id="output"></div>
+ </body>
 </html>
