--- a/Lista/index.html
+++ b/Lista/index.html
@@ -24,10 +24,14 @@
     </header>
     <main>
         <button type="button" class="button blue mobile" id="cadastrarProduto">Cadastrar Produto</button>
+      
+
         <table id="tableClient" class="records">
             <thead>
                 <tr>
                     <th>Produto</th>
+                    <th>Cliente</th>
+                    <th>E-mail</th>
                     <th>Ação</th>
                 </tr>
             </thead>
@@ -52,6 +56,7 @@
             </div>
         </div>
     </main>
+    <button type="button" class="button blue mobile" id="delete-all">Excluir Lista</button>
     </div>
     <div id="output"></div>
  </body>
