--- a/Lista/index.html
+++ b/Lista/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,24 +7,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,200;1,800&display=swap"
         rel="stylesheet">
-   
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/button.css">
     <link rel="stylesheet" href="css/records.css">
     <link rel="stylesheet" href="css/modal.css">
     <script src="js/main.js" defer></script>
-    <script src="js/random.js"></script>
     <title>ListaSimbiose</title>
 </head>
-
 <body>
     <header>
         <h1 class="header-title">Cadastro de Produtos</h1>
     </header>
     <main>
-        <button type="button" class="button blue mobile" id="cadastrarProduto">Cadastrar Produto</button>
-      
-
+        <button type="button" class="button blueviolet mobile" id="cadastrarProduto">Cadastrar Produto</button>
         <table id="tableClient" class="records">
             <thead>
                 <tr>
@@ -56,7 +50,7 @@
             </div>
         </div>
     </main>
-    <button type="button" class="button blue mobile" id="delete-all">Excluir Lista</button>
+    <button type="button" class="button red mobile" id="delete-all">Excluir Lista</button>
     </div>
     <div id="output"></div>
  </body>
