--- a/Lista/index.html
+++ b/Lista/index.html
@@ -19,7 +19,7 @@
         <h1 class="header-title">Cadastro de Produtos</h1>
     </header>
     <main>
-        <button type="button" class="button blueviolet mobile" id="cadastrarProduto">Cadastrar Produto</button>
+        <button type="button" class="button yellow mobile" id="cadastrarProduto">Cadastrar Produto</button>
         <table id="tableClient" class="records">
             <thead>
                 <tr>
@@ -49,8 +49,8 @@
                 </footer>
             </div>
         </div>
+        <button type="button" class="button red mobile" id="delete-all">Excluir Lista</button> 
     </main>
-    <button type="button" class="button red mobile" id="delete-all">Excluir Lista</button>
     </div>
     <div id="output"></div>
  </body>
